test/elaboration/bad/typeclass_dependent_superclasses.mle
class H 'a { }
class H 'a => I 'a { }
class H 'a, I 'a => J 'a { }
